--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
-<DOCTYPE html>
-	<!DOCTYPE html>
-	<html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>ანიმაციები</title>
-		<link rel="stylesheet" href="style/style.css"/>
-	</head>
-	<body>
-		<header>
-
-
-		<div class="container">	
-				<div class="photo1"><img src="img.jpg/4.jpeg"></div>
-           
-        	<img src="img.jpg/2.jpg">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Keyframe Animation</title>
+    <link rel="stylesheet" href="style/style.css">
+</head>
+<body>
+    <header>
+        <div class="animation-container">    
+            <img src="img/1.jpg" alt="Image 1" class="animated-image image1">
+            <p>
+            	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <img src="img/2.jpg" alt="Image 2" class="animated-image image2">
         </div>
-		</header>
-	</body>
-	</html>
+    </header>
+</body>
+</html>
